force-app/main/default/objects/EqualStart_Config__c/EqualStart_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Runtime configuration for EqualStart: mock-mode toggle, callout timeout, escalation routing, and Trust Layer thresholds.</description>
    <label>EqualStart Config</label>
</CustomObject>