force-app/main/default/objects/EqualStart_Config__c/fields/Callout_Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout_Ms__c</fullName>
    <defaultValue>20000</defaultValue>
    <description>HTTP timeout (ms) for Grants.gov callouts. Salesforce hard cap is 120000.</description>
    <label>Callout Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>