force-app/main/default/objects/EqualStart_Config__c/fields/Escalation_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Queue_Id__c</fullName>
    <description>Salesforce Queue Id used by Escalate_To_Human for HITL Case routing.</description>
    <label>Escalation Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>