force-app/main/default/objects/EqualStart_Config__c/fields/Max_Grant_Rows__c.field-meta.xml
<CustomField>
    <fullName>Max_Grant_Rows__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum rows requested per Grants.gov search2 call.</description>
    <label>Max Grant Rows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>