force-app/main/default/objects/EqualStart_Config__c/fields/Trust_Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Trust_Confidence_Threshold__c</fullName>
    <defaultValue>70</defaultValue>
    <description>Minimum agent action confidence (0-100) before the response is presented without a HITL nudge.</description>
    <label>Trust Confidence Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>