force-app/main/default/objects/EqualStart_Config__c/fields/Use_Mock_Data__c.field-meta.xml
<CustomField>
    <fullName>Use_Mock_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master mock-mode toggle. When true, GrantsGovService returns a hardcoded sample payload instead of calling the live Grants.gov API.</description>
    <inlineHelpText>Turn on to bypass live Grants.gov calls and use canned sample data (demo/testing).</inlineHelpText>
    <label>Use Mock Data</label>
    <type>Checkbox</type>
</CustomField>